--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       height="264"
       data-setup="{}"
     >
-      <source src="https://player.vimeo.com/video/845015283" type="video/mp4" />
+      <source src="./assets/video.mp4" type="video/mp4" />
+      <!-- <source src="https://player.vimeo.com/video/845015283" type="video/mp4" /> -->
       <!-- <source src="MY_VIDEO.webm" type="video/webm" /> -->
       <p class="vjs-no-js">
         To view this video please enable JavaScript, and consider upgrading to a
