--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       height="264"
       data-setup="{}"
     >
-      <source src="https://player.vimeo.com/video/845015283?player_id=0&amp;app_id=58479" type="video/mp4" />
+      <source src="https://player.vimeo.com/video/845015283?player_id=0&amp;app_id=58479" type="text/html" />
       <!-- <source src="./assets/video.mp4" type="video/mp4" /> -->
       <p class="vjs-no-js">
         To view this video please enable JavaScript, and consider upgrading to a
