--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <script src="./assets/dash.all.min.js"></script>
 
     <!-- videojs-contrib-dash script -->
-    <script src="./assets/video-dash.js"></script>
+    <!-- <script src="./assets/video-dash.js"></script> -->
 
     <script>
       var player = videojs("example-video");
@@ -59,5 +59,6 @@
     </script>
 
     <!-- <script src="https://vjs.zencdn.net/8.3.0/video.min.js"></script> -->
+    <script src="https://vjs.zencdn.net/8.3.0/video.min.js"></script>
   </body>
 </html>
