--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       controls
     ></video>
     <!-- <script src="video.js"></script> -->
+    <script src="./assets/video.min.js"></script>
 
     <!-- Dash.js -->
     <script src="./assets/dash.all.min.js"></script>
@@ -59,6 +60,6 @@
     </script>
 
     <!-- <script src="https://vjs.zencdn.net/8.3.0/video.min.js"></script> -->
-    <script src="https://vjs.zencdn.net/8.3.0/video.min.js"></script>
+    
   </body>
 </html>
